Refactor 2022, tests + core

--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<None Update="Inputs\**">
+    <ProjectReference Include="..\CoreAoC\CoreAoC.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+	<None Update="Resources\**">
 		<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	</None>
   </ItemGroup>
